[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/audio/enemy_hit.ogg" type="AudioStream" id=1]
[ext_resource path="res://assets/character/enemies/Chameleon/Chameleon.png" type="Texture" id=2]
[ext_resource path="res://assets/character/enemies/Chameleon/Enemy2.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.0884, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 66.2329, 31.6029 )

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 14, 15, 16, 17, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 9, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=5]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 30, 29, 28, 27, 26 ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 18.0762, 3.03157 )

[node name="Chameleon" type="KinematicBody2D" groups=[
"enemies",
]]
scale = Vector2( 0.65, 0.65 )
collision_layer = 4
collision_mask = 7
script = ExtResource( 3 )
gravity = 600

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -18.1519, -2.28847 )
texture = ExtResource( 2 )
vframes = 3
hframes = 13
frame = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.0662193, 0.662165 )
shape = SubResource( 1 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -15.0

[node name="StartAttackRange" type="Area2D" parent="."]
gravity_vec = Vector2( 0, 0 )

[node name="StartAttack2D" type="CollisionShape2D" parent="StartAttackRange"]
position = Vector2( -75.2047, -14.3246 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/Attack = SubResource( 3 )
anims/Run = SubResource( 4 )
anims/death = SubResource( 5 )

[node name="WaitingAttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AttackCoolDown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=[
"Danger",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -42.0884, 4.20069 )
shape = SubResource( 6 )
[connection signal="finished" from="HitSound" to="." method="_on_HitSound_finished"]
[connection signal="body_entered" from="StartAttackRange" to="." method="_on_StartAttackRange_body_entered"]
[connection signal="body_exited" from="StartAttackRange" to="." method="_on_StartAttackRange_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="WaitingAttackTimer" to="." method="_on_WaitingAttackTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackCoolDown" to="." method="_on_AttackCoolDown_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
